apps/staging/fbd-ecommerce/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fbd-ecommerce
  namespace: staging
  labels:
    app: fbd-ecommerce
    environment: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fbd-ecommerce
  template:
    metadata:
      labels:
        app: fbd-ecommerce
        environment: staging
    spec:
      imagePullSecrets:
        - name: ocir-pull
      containers:
        - name: fbd-ecommerce
          image: sa-vinhedo-1.ocir.io/axtvnrdemzo7/fbd-ecommerce:sha-f3c7c84-k8s3
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: http
          resources:
            requests:
              memory: 128Mi
            limits:
              memory: 384Mi
          livenessProbe:
            httpGet:
              path: /up
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /up
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
