apps/staging/fbd-ecommerce/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: fbd-ecommerce-route
  namespace: staging
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`fbd-staging.artr.com.br`)
      kind: Rule
      services:
        - name: fbd-ecommerce
          port: 80
  tls:
    secretName: wildcard-artr-com-br-tls
